fix mobile spacing bug

--- a/css/style.scss
+++ b/css/style.scss
@@ -125,7 +125,7 @@ body, html {
   justify-content: flex-start;
   font-family: $body-font;
   width: 100%;
-  max-height: 65%;
+  max-height: 60%;
   box-shadow: 20px 20px 28px -15px rgba(0,0,0,0.75);
   border-radius: 5px;
 
